--- a/market-ajh/templates/home/welcome.index.html.twig
+++ b/market-ajh/templates/home/welcome.index.html.twig
@@ -4,8 +4,30 @@
 
 {% block body %}
 <div class="flex-col flex justify-center items-center h-screen">
-    <h1 class="text-center">Bienvenue sur le market de la guilde Ah-Jin!</h1>
-    <img src="{{ asset('images/logo_guilde.jpg') }}" alt="Logo de la guilde" class="w-1/2 h-auto mb-4">
-    
+    <div class="text-center bg-GREEN text-white p-8 rounded-lg shadow-lg">
+        <h1 class="text-4xl font-bold mb-4">Bienvenue sur le market de la guilde Ah-Jin!</h1>
+        <img src="{{ asset('images/logo_guilde.jpg') }}" alt="Logo de la guilde" class="w-1/4 h-auto mb-6 mx-auto">
+        <p class="text-lg mb-4">
+            Vous n'êtes pas encore connecté. Il est toujours possible de consulter les différents items, mais pour 
+            commander ou accéder à d'autres fonctionnalités, merci de vous créer un compte.
+        </p>
+        <p class="text-lg mb-4">
+            En tant que membre de la guilde, vous aurez accès à des offres exclusives, des promotions spéciales, 
+            et la possibilité de participer à des enchères pour des items rares. Rejoignez-nous dès maintenant et 
+            découvrez tout ce que notre market a à offrir !
+        </p>
+        <p class="text-lg">
+            Si vous avez déjà un compte, connectez-vous pour profiter pleinement de nos services. Sinon, cliquez 
+            sur le bouton ci-dessous pour vous inscrire et commencer votre aventure avec la guilde Ah-Jin !
+        </p>
+        <div class="mt-6 flex justify-center items-center space-x-4">
+            <a href="/login" class="bg-VIOLET text-WHITE py-2 px-4 rounded">
+            Se connecter
+            </a>
+            <a href="/register" class="bg-VIOLET text-WHITE py-2 px-4 rounded">
+            Créer un compte
+            </a>
+        </div>
+    </div>
 </div>
 {% endblock %}
