--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -51,8 +51,8 @@
     <!-- Footer aligné avec la navigation -->
     <footer class="bg-BLACK text-WHITE p-4 border-t-2 border-PINK">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-PINK font-bold">&copy; {{ 'now'|date('Y') }} Ma Boutique</p>
-            <p class="text-WHITE/80 mt-1">Tous droits réservés</p>
+            <p class="text-PINK font-bold">&copy; {{ 'now'|date('Y') }} Market AJH</p>
+            <p class="text-WHITE/80 mt-1 font-bold">Tous droits réservés. Pour tout usage externe à la guilde, merci de contaxter omengaming.exe sur discord</p>
         </div>
     </footer>
 </body>
