--- a/market-ajh/templates/user/_form.html.twig
+++ b/market-ajh/templates/user/_form.html.twig
@@ -1,5 +1,19 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'space-y-6'}}) }}
+    <div class="space-y-2">
+        {{ form_label(form.username, null, {'label_attr': {'class': 'block text-BLACK font-medium'}}) }}
+        {{ form_widget(form.username, {'attr': {'class': 'w-full px-4 py-2 rounded border border-GRAY text-BLACK'}}) }}
+        {{ form_errors(form.username) }}
+    </div>
 
+    <div class="space-y-2">
+        <label class="block text-BLACK font-medium">Rôles</label>
+        <div class="space-y-1">
+            {{ form_widget(form.roles, {'attr': {'class': 'space-y-1'}}) }}
+        </div>
+        {{ form_errors(form.roles) }}
+    </div>
+
+    <button type="submit" class="w-full bg-VIOLET text-WHITE py-2 px-4 rounded hover:bg-PINK transition-colors">
+        {{ button_label|default('Enregistrer') }}
+    </button>
 {{ form_end(form) }}
