--- a/market-ajh/templates/item/_delete_form.html.twig
+++ b/market-ajh/templates/item/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_item_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_item_delete', {'id': item.id}) }}" onsubmit="return confirm('Confirmer la suppression ?');" class="inline">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
-    <button class="btn">Delete</button>
+    <button class="bg-red-600 hover:bg-red-700 text-WHITE px-6 py-2 rounded-lg transition-colors">
+        Supprimer
+    </button>
 </form>
