correctif de l'affichage vitrine si pas d'image

--- a/market-ajh/templates/shop/list.html.twig
+++ b/market-ajh/templates/shop/list.html.twig
@@ -6,7 +6,11 @@
 <div class="flex justify-center pt-4">
     {% for item in items %}
         <div class="bg-GREEN flex flex-col items-center m-4 p-4">
-            <img src="{{ asset(item.image) }}" alt="{{ item.nom }}" style="max-width: 100px; max-height: 100px;">
+            {% if item.image %}
+                <img src="{{ asset(item.image) }}" alt="{{ item.nom }}" style="max-width: 100px; max-height: 100px;">
+            {% else %}
+                <img src="{{ asset('default-image.jpg') }}" alt="Default image" style="max-width: 100px; max-height: 100px;">
+            {% endif %}
             <p>{{ item.nom }}</p>
             <p>{{ item.description }}</p>
             <p>{{ item.prix }} Cols</p>
